# ReviewEngine

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  THIRD_PARTY_LICENSES.md  clippy.toml  deny.toml  docker-compose.yml  entrypoint.sh  install.sh  justfile  rustfmt.toml
.github/workflows/: audit.yml  codeql.yml  release.yml
.kimi-code/skills/review-engine/: SKILL.md
deploy/: gitlab-ee.md
docs/: README.md  code-audit-default.toml  config-schema.md  configuration.md  enterprise.md  experts_aggregate.md  getting-started.md  professional_team_design.md  repo_aware_review_strategy.md  rest-api.md  review_engine_large_pr_strategy.md  webhook-dispatch-design.md
docs/decisions/: interactive-init.md  provider-architecture.md  unified-scoring-architecture.md
docs/integrations/: README.md  ci-examples.md  github.md  gitlab.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/composables/: useConfig.ts  useDashboard.ts  useExperts.ts  (+4 more)
scripts/: generate-third-party-licenses.sh  publish-release.sh
src/: context.rs  error.rs  expert.rs  feedback.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs  tokenizer.rs
src/actions/: describe.rs  improve.rs  init.rs  mod.rs  registry.rs  repo_review.rs  update_changelog.rs
src/cli/: handlers.rs  mod.rs
src/commands/: mod.rs
src/config/: defaults.rs  mod.rs  resolver.rs
src/context/: file_contents.rs  gather.rs  mod.rs
src/diff/: chunker.rs  constants.rs  context.rs  filter.rs  large_pr.rs  mod.rs  parser.rs  processor.rs  render.rs  selection.rs  source.rs
src/expert/: mod.rs
src/git/: local.rs  mod.rs
src/git_provider/: github.rs  gitlab.rs  mod.rs
src/github/: mod.rs  pagination.rs  types.rs
src/gitlab/: mod.rs
src/input/: mod.rs
src/language/: mod.rs
src/llm/: client.rs  mod.rs  provider.rs  rate_limiter.rs
src/metrics/: mod.rs
src/models/: config.rs  expert.rs  finding.rs  mod.rs
src/output/: markdown.rs  mod.rs  parser.rs  path.rs  renderer.rs  team_renderer.rs
src/progress/: mod.rs
src/prompt/: engine.rs  mod.rs  schemas.rs  templates.rs
src/publisher/: github.rs  gitlab.rs  mod.rs
src/python/: mod.rs
src/repo/: analysis.rs  filter.rs  mod.rs  scoring.rs
src/scoring/: mod.rs  repo.rs  review.rs
src/server/: auth.rs  dispatcher.rs  feedback.rs  github.rs  gitlab.rs  log_collector.rs  mod.rs  router.rs  state.rs  task_queue.rs  webhook.rs
src/team/: lead_consolidator.rs  mod.rs  orchestrator.rs  verifier.rs
src/tokenizer/: mod.rs
src/tools/: ask.rs  describe.rs  init.rs  mod.rs  repo_review.rs
tests/: server.rs
(+59 files in other folders)
