[package]
name = "review-engine"
version = "0.6.7"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "review_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "review-engine"
path = "src/main.rs"

[dependencies]
# Python binding
pyo3 = { version = "0.29", features = ["extension-module"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP server (health check, webhook)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Metrics and monitoring
prometheus = { version = "0.14", default-features = false, features = ["process"] }
once_cell = "1"

# File system watching (config hot reload)
notify = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Security
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Config parsing
toml = "0.8"

# Template engine (Jinja2-compatible)
minijinja = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"], optional = true }

# Interactive terminal UI (for `review-engine init`)
inquire = "0.7"

# Diff parsing
similar = "2"

# Regex
regex = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID for request tracking
uuid = { version = "1", features = ["v4", "serde"] }

# Async stream processing
futures = "0.3"

# Async trait support
async-trait = "0.1"

# Token counting for LLM context window management
tiktoken-rs = "0.7"

# User home directory lookup (no MPL-2.0 transitive dependency)
home = "0.5"

[features]
default = ["cli"]
cli = ["dep:clap"]
python = ["dep:pyo3"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[lints.clippy]
# Catch real bugs — warn about these
unwrap_used = { level = "warn", priority = 0 }
expect_used = { level = "warn", priority = 0 }
# Suppress noisy style nits
pedantic = { level = "allow", priority = -1 }
style = { level = "allow", priority = -1 }
cognitive_complexity = { level = "allow", priority = -1 }
too_many_arguments = { level = "allow", priority = -1 }
large_enum_variant = { level = "allow", priority = -1 }
missing_panics_doc = { level = "allow", priority = -1 }
module_name_repetitions = { level = "allow", priority = -1 }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6"
